[gd_scene load_steps=5 format=2]

[ext_resource path="res://app/style/theme_game_card.tres" type="Theme" id=1]
[ext_resource path="res://app/shader/blur.gdshader" type="Shader" id=2]
[ext_resource path="res://app/pause_menu/pause_menu.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/amount = 2.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="BlurShader" type="ColorRect" parent="Control"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VC" type="VBoxContainer" parent="Control/CC"]
offset_left = 432.0
offset_top = 226.0
offset_right = 592.0
offset_bottom = 374.0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Control/CC/VC"]
offset_right = 160.0
offset_bottom = 19.0
text = "T_PAUSED"
align = 1

[node name="ButtonResume" type="Button" parent="Control/CC/VC"]
offset_top = 27.0
offset_right = 160.0
offset_bottom = 62.0
text = "T_RESUME"

[node name="ButtonRestart" type="Button" parent="Control/CC/VC"]
offset_top = 70.0
offset_right = 160.0
offset_bottom = 105.0
text = "T_RESTART"

[node name="CustomBtns" type="VBoxContainer" parent="Control/CC/VC"]
visible = false
offset_top = 113.0
offset_right = 160.0
offset_bottom = 277.0
theme_override_constants/separation = 8

[node name="ButtonMenu" type="Button" parent="Control/CC/VC"]
offset_top = 113.0
offset_right = 160.0
offset_bottom = 148.0
text = "T_BACK_TO_MENU"

[connection signal="pressed" from="Control/CC/VC/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="Control/CC/VC/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="Control/CC/VC/ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
